[gd_scene format=3 uid="uid://dtujnhr8snri7"]

[ext_resource type="Texture2D" uid="uid://dwdjc10yjsq68" path="res://Assets/Players/Body All Base Player Movement-Sheet.png" id="1_rihsh"]
[ext_resource type="Script" uid="uid://dqdrvkfcoxd1s" path="res://Player/Player.gd" id="2_dewec"]
[ext_resource type="Texture2D" uid="uid://b6wollx5g1wro" path="res://Assets/Players/Heads All Base Player Movement .png" id="2_vop8p"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tok1r"]
radius = 4.0
height = 16.0

[sub_resource type="Animation" id="Animation_vop8p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HeadSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodySprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uqwy3"]
_data = {
&"RESET": SubResource("Animation_vop8p")
}

[sub_resource type="Animation" id="Animation_4w63e"]
resource_name = "Back_Block"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HeadSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.099999994, 0.23333333, 0.36666667, 0.4666667, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [135, 136, 137, 138, 139, 140]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodySprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.099999994, 0.23333333, 0.36666667, 0.4666667, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [135, 136, 137, 138, 139, 140]
}

[sub_resource type="Animation" id="Animation_rihsh"]
resource_name = "Back_Breathing"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HeadSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.033333335, 0.06666667, 0.10000001),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [90, 91, 92, 93]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodySprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.033333335, 0.06666667, 0.10000001),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [90, 91, 92, 93]
}

[sub_resource type="Animation" id="Animation_w5hk3"]
resource_name = "Back_Death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HeadSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.099999994, 0.19999999, 0.3, 0.4, 0.5, 0.6, 0.7, 0.79999995, 0.9, 1.0999999),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [153, 154, 155, 156, 157, 158, 159, 160, 161, 161, 161]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodySprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.099999994, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [154, 153, 155, 156, 157, 158, 159, 160, 161]
}

[sub_resource type="Animation" id="Animation_p0yjm"]
resource_name = "Back_Hurt"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HeadSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.033333335, 0.06666667, 0.10000001),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [144, 145, 146, 147]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodySprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.033333335, 0.06666667, 0.10000001),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [144, 145, 146, 147]
}

[sub_resource type="Animation" id="Animation_tj0vx"]
resource_name = "Back_Idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HeadSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [81]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodySprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [81]
}

[sub_resource type="Animation" id="Animation_2q2f1"]
resource_name = "Back_Interact"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HeadSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.033333335, 0.06666667, 0.10000001),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [126, 127, 128, 129]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodySprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(-1.4901161e-08, 0.033333316, 0.06666666, 0.099999994),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [126, 127, 128, 129]
}

[sub_resource type="Animation" id="Animation_ikxd4"]
resource_name = "Back_Jump"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HeadSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.033333335, 0.06666667, 0.10000001, 0.13333334, 0.16666667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [108, 109, 110, 111, 112, 113]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodySprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.033333335, 0.06666667, 0.10000001, 0.13333334, 0.16666667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [108, 109, 110, 111, 112, 113]
}

[sub_resource type="Animation" id="Animation_r433l"]
resource_name = "Back_Roll"
length = 0.6666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HeadSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.16666667, 0.3, 0.4, 0.5, 0.6333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [117, 118, 119, 120, 121, 122]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodySprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(7.450581e-09, 0.16666669, 0.3, 0.39999995, 0.5, 0.6333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [117, 118, 119, 120, 121, 122]
}

[sub_resource type="Animation" id="Animation_bhnal"]
resource_name = "Back_Walk"
length = 1.3333334
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HeadSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(6.7055225e-08, 0.16666673, 0.3333334, 0.50000006, 0.66666675, 0.8333334, 1, 1.1666667, 1.3333334),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [99, 100, 101, 102, 103, 104, 105, 106, 107]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodySprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(6.7055225e-08, 0.16666673, 0.3333334, 0.50000006, 0.66666675, 0.8333334, 1, 1.1666667, 1.3333334),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [99, 100, 101, 102, 103, 104, 105, 106, 107]
}

[sub_resource type="Animation" id="Animation_uqwy3"]
resource_name = "Front_Block"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HeadSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.033333335, 0.06666667, 0.10000001, 0.13333334),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [54, 55, 56, 57, 58]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodySprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.033333335, 0.06666667, 0.10000001, 0.13333334),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [54, 55, 56, 57, 58]
}

[sub_resource type="Animation" id="Animation_8caby"]
resource_name = "Front_Breathing"
length = 1.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6666667, 0.8, 1.6333333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [9, 10, 11, 12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HeadSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6666667, 0.8, 1.6333333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [9, 10, 11, 12]
}

[sub_resource type="Animation" id="Animation_2dedv"]
resource_name = "Front_Death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HeadSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.033333335, 0.06666667, 0.10000001, 0.13333334, 0.16666667, 0.20000002, 0.23333335, 0.26666668),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [72, 73, 74, 75, 76, 77, 78, 79, 80]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodySprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.033333335, 0.06666667, 0.10000001, 0.13333334, 0.16666667, 0.20000002, 0.23333335, 0.26666668),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [72, 73, 74, 75, 76, 77, 78, 79, 80]
}

[sub_resource type="Animation" id="Animation_fqpan"]
resource_name = "Front_Hurt"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HeadSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.16666669, 0.43333334, 0.8000001),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [63, 64, 65, 66]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodySprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.16666669, 0.43333334, 0.8000001),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [63, 64, 65, 66]
}

[sub_resource type="Animation" id="Animation_61wwb"]
resource_name = "Front_Idle"
length = 3.4666667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HeadSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.93333334, 1.2333333, 2.9333334),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodySprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.96666664, 1.2333333, 2.9333334),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 2]
}

[sub_resource type="Animation" id="Animation_7gy1f"]
resource_name = "Front_Interact"
length = 0.53333336
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HeadSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.16666667, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [45, 46, 47, 48]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodySprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.16666667, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [45, 46, 47, 48]
}

[sub_resource type="Animation" id="Animation_uns0w"]
resource_name = "Front_Jump"
length = 0.6666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HeadSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.13333334, 0.23333338, 0.36666673, 0.50000006, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [27, 28, 29, 30, 31, 32]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodySprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.13333334, 0.23333338, 0.3666667, 0.50000006, 0.59999996),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [27, 28, 29, 30, 31, 32]
}

[sub_resource type="Animation" id="Animation_iwfv5"]
resource_name = "Front_Roll"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.16666667, 0.3, 0.4, 0.5, 0.6333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39, 40, 41]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HeadSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.16666667, 0.3, 0.4, 0.5, 0.63333327),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39, 40, 41]
}

[sub_resource type="Animation" id="Animation_i62jw"]
resource_name = "Front_Walk"
length = 0.93333334
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.13333334, 0.26666668, 0.40000004, 0.53333336, 0.6666667, 0.8, 0.93333334),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [18, 19, 20, 21, 22, 23, 24, 25]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HeadSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(-2.9802322e-08, 0.13333334, 0.26666665, 0.39999998, 0.53333336, 0.6666667, 0.8, 0.9333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [18, 19, 20, 21, 22, 23, 24, 25]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tj0vx"]
_data = {
&"Back_Block": SubResource("Animation_4w63e"),
&"Back_Breathing": SubResource("Animation_rihsh"),
&"Back_Death": SubResource("Animation_w5hk3"),
&"Back_Hurt": SubResource("Animation_p0yjm"),
&"Back_Idle": SubResource("Animation_tj0vx"),
&"Back_Interact": SubResource("Animation_2q2f1"),
&"Back_Jump": SubResource("Animation_ikxd4"),
&"Back_Roll": SubResource("Animation_r433l"),
&"Back_Walk": SubResource("Animation_bhnal"),
&"Front_Block": SubResource("Animation_uqwy3"),
&"Front_Breathing": SubResource("Animation_8caby"),
&"Front_Death": SubResource("Animation_2dedv"),
&"Front_Hurt": SubResource("Animation_fqpan"),
&"Front_Idle": SubResource("Animation_61wwb"),
&"Front_Interact": SubResource("Animation_7gy1f"),
&"Front_Jump": SubResource("Animation_uns0w"),
&"Front_Roll": SubResource("Animation_iwfv5"),
&"Front_Walk": SubResource("Animation_i62jw")
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bhnal"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tok1r"]
animation = &"Base/Front_Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ddoul"]
animation = &"Base/Back_Idle"
advance_on_start = true

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_8g4oa"]
blend_point_0/node = SubResource("AnimationNodeAnimation_tok1r")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_ddoul")
blend_point_1/pos = -1.0

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8g4oa"]
animation = &"Base/Front_Walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6ysni"]
animation = &"Base/Back_Walk"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_tok1r"]
blend_point_0/node = SubResource("AnimationNodeAnimation_8g4oa")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_6ysni")
blend_point_1/pos = -1.0

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6ysni"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ddoul"]
advance_condition = &"is_moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8g4oa"]
advance_condition = &"!is_walking"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_vlldt"]
states/Idle/node = SubResource("AnimationNodeBlendSpace1D_8g4oa")
states/Idle/position = Vector2(323, 119)
states/Walk/node = SubResource("AnimationNodeBlendSpace1D_tok1r")
states/Walk/position = Vector2(430, 71)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_6ysni"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_ddoul"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_8g4oa")]

[node name="Player" type="CharacterBody2D" unique_id=1685320869]
script = ExtResource("2_dewec")

[node name="BodySprite" type="Sprite2D" parent="." unique_id=705730542]
position = Vector2(0, -9)
texture = ExtResource("1_rihsh")
hframes = 9
vframes = 18

[node name="HeadSprite" type="Sprite2D" parent="." unique_id=2023899361]
position = Vector2(0, -9)
texture = ExtResource("2_vop8p")
hframes = 9
vframes = 18

[node name="Hurtbox" type="Area2D" parent="." unique_id=1500680497]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox" unique_id=138792918]
position = Vector2(0, -8)
shape = SubResource("CapsuleShape2D_tok1r")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=424759645]
libraries/ = SubResource("AnimationLibrary_uqwy3")
libraries/Base = SubResource("AnimationLibrary_tj0vx")
libraries/Combat = SubResource("AnimationLibrary_bhnal")

[node name="AnimationTree" type="AnimationTree" parent="." unique_id=1822511718]
tree_root = SubResource("AnimationNodeStateMachine_vlldt")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/!is_walking = false
parameters/conditions/is_moving = false
parameters/Idle/blend_position = 0.0
parameters/Walk/blend_position = 0.0

[node name="WeaponHand" type="Marker2D" parent="." unique_id=172334390]
position = Vector2(-4, -2)

[node name="Camera2D" type="Camera2D" parent="." unique_id=256282440]
position = Vector2(0, -5)
zoom = Vector2(7, 7)

[node name="WeaponBack" type="Marker2D" parent="." unique_id=845141277]
